assets/css/style.css
/* ... */
.container {
  max-width: 968px;
  margin: auto;
}

.row {
  display: flex;

  flex-wrap: wrap;
}

.section .container {
  padding-top: 3.9rem;
  padding-bottom: 4.75rem;
}

.section-title {
  font-size: var(--h1-font-size);
  margin-left: var(--m-0-75);
  margin-bottom: var(--m-2-5);
}

.padd-15 {
  padding-left: 15px;
  padding-right: 15px;
}

.btn {
  padding: 0.75rem 2rem;
  line-height: 1;
  border-radius: var(--border-radius);
}

.btn:focus {
  outline: 0;
}

@keyframes button-push {
  50% {
    transform: scale(0.8);
  }
  100% {
    transform: scale(1);
  }
}

.btn-default {
  color: #fff;
  vertical-align: middle;
  display: inline-block;
  background-color: var(--color-primary);
  transform: perspective(1px) translateZ(0);
}

.btn-default:hover {
  animation-name: button-push;
  animation-duration: 0.3s;
  animation-timing-function: linear;
  animation-iteration-count: 1;
}

.header {
  width: 100%;
  background-color: var(--color-light);
  position: fixed;
  top: 0;
  left: 0;
  z-index: 100;
}

.nav {
  height: calc(var(--header-height)+1.5rem);
  display: flex;
  justify-content: space-between;
  align-items: center;
  column-gap: 3rem;
}

.nav-logo {
  font-size: var(--h2-font-size);
  font-weight: var(--font-semi-bold);
  letter-spacing: 0.125rem;
  position: relative;
}
.nav-logo::after {
  position: absolute;
  content: "";
  width: 0.3rem;
  height: 0.3rem;
  border-radius: 50%;
  background-color: var(--color-primary);
  top: 56%;
  right: -0.25rem;
}
.nav-menu {
  margin-left: auto;
}
.nav-list {
  display: flex;
  column-gap: 3rem;
}
.nav-link {
  font-weight: var(--font-medium);
  transition: 0.3s;
}

.nav-link:hover {
  color: var(--color-primary);
}

.nav-close {
  font-size: 1rem;
  position: absolute;
  top: 1rem;
  right: 1.25rem;
  cursor: pointer;
}

.nav-btns {
  display: inline-flex;
  align-items: center;
  column-gap: 1rem;
}

.change-theme {
  font-size: 1.15rem;
  cursor: pointer;
}

.nav-toggle {
  font-size: 1.2rem;
  cursor: pointer;
}

.nav-close,
.nav-toggle {
  display: none;
}
.active-link {
  position: relative;
}
.active-link::before {
  content: "";
  position: absolute;
  bottom: -0.75rem;
  left: 45%;
  width: 0.3rem;
  height: 0.3rem;
  background-color: var(--color-primary);
  border-radius: 50%;
}

.scroll-header {
  box-shadow: 0 1px 4px rgba(165, 125, 125, 0.02);
}

.home {
  display: flex;
  justify-content: center;
  height: 100vh;
  min-height: 100vh;
}
.home .intro {
  max-width: 540px;
  text-align: center;
}

.home .intro img {
  margin-bottom: var(--m-1);
}

.home .intro .social-icons {
  margin-top: var(--m-1-5);
  margin-bottom: var(--m-2);
}

.home .intro .social-icons li {
  display: inline-block;
}

.home .intro .social-icons li:not(:last-child) {
  margin-right: var(--m-1-5);
}

.home .intro .social-icons a {
  font-size: var(--h3-font-size);
}

.scroll-down {
  position: absolute;
  bottom: var(--m-2-5);
  left: 0;
  width: 100%;
}

.mouse-wrapper {
  font-size: var(--small-font-size);
  display: block;
  margin: auto;
  max-width: 100px;
  text-align: center;
}

@keyframes ani-mouse {
  0% {
    top: 29%;
  }
  15% {
    top: 50%;
  }
  50% {
    top: 50%;
  }
  100% {
    top: 29%;
  }
}

.mouse {
  border: 2px solid var(--color-dark);
  display: block;
  height: 1.75rem;
  width: 1.25rem;
  margin: auto;
  margin-top: var(--m-0-75);
  border-radius: var(--border-radius);
  position: relative;
}
.mouse .wheel {
  background-color: var(--color-dark);
  border-radius: 50%;
  width: 0.25rem;
  height: 0.25rem;
  position: absolute;
  top: var(--m-0-5);
  left: 40%;
  display: block;
  animation: ani-mouse 2s linear infinite;
}

.about-img {
  flex: 0 0 25%;
  max-width: 25%;
  
  
}

.about-content {
  flex: 0 0 75%;
  max-width: 75%;
  
}
.about-content .about-text
/* .skills  */ {
  flex: 0 0 100%;
  max-width: 100%;
}

.rouded {
  background-color: var(--color-white);
  padding: var(--card-padding);
  border-radius: var(--border-radius);
  box-shadow:0 4px 8px rgba(0,0,0,0.3) ;

}

.about-text p {
  text-align: justify;
  margin-bottom: var(--m-1);
}
/* 
.skills .skill-item {
  flex: 0 0 100%;
  max-width: 100%;
}
.skills .skill-item h4 {
  margin-bottom: var(--m-0-75);
}
.skills .skill-item .progress {
  background-color: var(--color-light);
  height: 0.45rem;
  border-radius: var(--border-radius);
  width: 100%;
  position: relative;
}

.skills .skill-item:not(:last-child) {
  margin-bottom: var(--m-1-5);
}

.skills .skill-item .progress .progress-in {
  position: absolute;
  left: 0;
  top: 0;
  height: 100%;
  border-radius: var(--border-radius);
}

.skills .skill-item .skill-percent {
  position: absolute;
  right: 0;
  top: -2.5rem;
} */

.fact-item {
  flex: 0 0 25%;
  max-width: 25%;
  margin-top: var(--m-2-5);
  text-align: center;
}

.fact-item i {
  font-size: var(--h2-font-size);
  color: var(--color-gray);
}

.services .service-item {
  flex: 0 0 33.33%;
  max-width: 33.33%;
  display: flex;
}

.services .service-item .service-item-inner {
  border-radius: var(--border-radius);
  padding: var(--card-padding);
  text-align: center;
  transform: translateY(0);
  transition: 0.3s;
}
.services .service-item .service-item-inner:hover {
  transform: translateY(-0.625rem);
}

.services .service-item img {
  margin-bottom: var(--m-0-75);
}

.service-item h3 {
  margin-bottom: var(--m-0-5);
  color: #fff;
}

.service-item p {
  color: #fff;
}

.text {
  text-align: center;
  margin-top: var(--m-1-5);
}

.text a {
  color: var(--color-primary);
}

.experience {
  flex: 0 0 100%;
  max-width: 100%;
  
}

.timeline-box {
  flex: 0 0 100%;
  max-width: 100%;
  
}

.timeline {
  background-color: var(--color-white);
  padding: 1.9rem 0.95rem;
  border-radius: var(--border-radius);
  width: 100%;
  box-shadow:0 4px 8px rgba(0,0,0,0.3) ;

  position: relative;
}

.timeline .timeline-item {
  position: relative;
  padding-left: 2.5rem;
  padding-bottom: 1.9rem;
}
/* ... */

